--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ main.calculator{
     background-color: #333A58;
     border: 2px solid #fff;
     border-radius: 10px 10px 0 0 ;
+    overflow: hidden;
 }
 
 .calculator-buttons{
@@ -89,10 +90,41 @@ div#resultButton:hover{
     background-color: #AA2442;
 }
 
-@media (max-width:769px){
+.developer-area{
+    color: #fff;
+}
+
+.developer-area>a{
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.1em;
+    transition: .5s;
+}
+
+.developer-area>a:hover{
+    text-shadow: 1px 1px 10px #fff;
+    font-size: 1.15em;
+}
+
+@media (max-width: 480px){
+    .calculator-display, .calculator-buttons{
+        width: 95vw;
+    }
+
+    #display{
+        font-size: 2.5em;
+    }
+}
+
+@media (min-width:481px) and (max-width:850px){
     .calculator-display, .calculator-buttons{
         width: 80vw;
     }
+
+    #display{
+        font-size: 3em;
+    }
+    
 }
 
 
